# webscrapper-ai

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  streamlit_app.py
.claude/: settings.json
.github/workflows/: ci.yml  daily_collect_pipeline.yml
.streamlit/: secrets.toml.example
alembic/: env.py
alembic/versions/: e34f9c9bf6e5_add_severity_and_sheet_row_hash_to_.py
docs/: deployment_supabase_streamlit.md  source_config_template.csv
scripts/: bootstrap_db.py  check_db_connection.py  ingest_from_sheet.py  run_collectors.py  run_pipeline.py  schedule_sync_scrape.py  seed_db.py  show_local_stats.py  validate_source_sheet.py
src/: config.py
src/collectors/: base.py  classifier.py  registry.py  sheet_ingestor.py  source_config.py
src/collectors/cpi/: cotton.py  forwarder_posts.py  freight_rates.py  fx_inr_gbp.py
src/collectors/lsi/: carriers.py  felixstowe.py  jnpt.py  loadstar.py
src/collectors/rpi/: dgft.py  hmrc.py  uk_tra.py  ukft.py
src/dashboard/: app.py
src/dashboard/pages/: index_charts.py  lane_overview.py  signal_log.py  source_admin.py
src/db/: engine.py  models.py  seed.py  session.py
src/pipeline/: attribution.py  cusum.py  ewma.py  rollup.py  scoring.py  zscore.py
tests/: conftest.py
tests/test_collectors/: test_source_config.py
tests/test_pipeline/: test_cusum.py  test_ewma.py  test_rollup.py  test_scoring.py
